--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -17,12 +17,12 @@ env:
   - variable: DISCORD_CLIENT_SECRET
     value: YefpOYWdIOUkpxDx4t5w17Ms6sOFXOjj
   - variable: NEXT_PUBLIC_TWITCH_CLIENT_ID
-    value: 9u0mtc83xeabmguw53c89dehth0gwg
+    value: rxmohc28tthq0nudfd6iwx0sgy88dp
   - variable: TWITCH_CLIENT_SECRET
-    value: wclfm53vrx76i435p2jhmyv3v1ovrn
+    value: w2zamrz7xix7k91albcfhxxri42725
   - variable: DISCORD_BOT_TOKEN
-    value: YOUR_DISCORD_BOT_TOKEN
+    secret: DISCORD_BOT_TOKEN
   - variable: TWITCH_BOT_USERNAME
-    value: YOUR_TWITCH_BOT_USERNAME
+    secret: TWITCH_BOT_USERNAME
   - variable: TWITCH_BOT_OAUTH_TOKEN
-    value: oauth:YOUR_TWITCH_OAUTH_TOKEN
+    secret: TWITCH_BOT_OAUTH_TOKEN
