--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -22,7 +22,13 @@ env:
     value: w2zamrz7xix7k91albcfhxxri42725
   - variable: DISCORD_BOT_TOKEN
     secret: DISCORD_BOT_TOKEN
+    availability:
+      - RUNTIME
   - variable: TWITCH_BOT_USERNAME
     secret: TWITCH_BOT_USERNAME
+    availability:
+      - RUNTIME
   - variable: TWITCH_BOT_OAUTH_TOKEN
     secret: TWITCH_BOT_OAUTH_TOKEN
+    availability:
+      - RUNTIME
