--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -23,12 +23,15 @@ env:
   - variable: DISCORD_BOT_TOKEN
     secret: DISCORD_BOT_TOKEN
     availability:
+      - BUILD
       - RUNTIME
   - variable: TWITCH_BOT_USERNAME
     secret: TWITCH_BOT_USERNAME
     availability:
+      - BUILD
       - RUNTIME
   - variable: TWITCH_BOT_OAUTH_TOKEN
     secret: TWITCH_BOT_OAUTH_TOKEN
     availability:
+      - BUILD
       - RUNTIME
