--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "tmi.js": "^1.8.5",
+    "tweetnacl": "^1.0.3",
     "youtube-sr": "^4.3.8",
     "yt-dlp-wrap": "^2.3.12",
     "ytdl-core": "^4.11.5",
